{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 150,
  "lineage": "ec663145-556b-8957-bd40-0a34bbf81423",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0acef813d0236f33f",
            "domain": "vpc",
            "id": "eipalloc-0eb31ead68cd5f4e4",
            "network_interface": "eni-0f76a1f3bf2a6a8e9",
            "private_dns": "ip-10-0-86-0.ec2.internal",
            "private_ip": "10.0.86.0",
            "public_dns": "ec2-54-209-121-43.compute-1.amazonaws.com",
            "public_ip": "54.209.121.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0839be23c0602dc7a",
            "owner_id": "068561858766",
            "tags": {
              "Name": "golden-ami-factory"
            },
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb31ead68cd5f4e4",
            "id": "nat-099cc052b67488600",
            "network_interface_id": "eni-0f76a1f3bf2a6a8e9",
            "private_ip": "10.0.86.0",
            "public_ip": "54.209.121.43",
            "subnet_id": "subnet-0f5c6570db0619749",
            "tags": {
              "Name": "golden-ami-factory"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0839be23c0602dc7a",
            "id": "r-rtb-06a00b90ee7c0f3f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a00b90ee7c0f3f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3e8ef9b781022b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-099cc052b67488600",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3e8ef9b781022b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a3e8ef9b781022b9",
            "owner_id": "068561858766",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-099cc052b67488600",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "golden-ami-factory-private"
            },
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06a00b90ee7c0f3f8",
            "owner_id": "068561858766",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0839be23c0602dc7a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "golden-ami-factory-public"
            },
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac335b3eb13e758",
            "route_table_id": "rtb-0a3e8ef9b781022b9",
            "subnet_id": "subnet-0406fdcc928b65cf4"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e737037f9f7fb628",
            "route_table_id": "rtb-06a00b90ee7c0f3f8",
            "subnet_id": "subnet-0f5c6570db0619749"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068561858766:security-group/sg-048b1b91939bd380e",
            "description": "Allow TLS for Image Builder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-048b1b91939bd380e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "terraform-20191220151021692200000001",
            "name_prefix": null,
            "owner_id": "068561858766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "golden-ami-factory"
            },
            "timeouts": null,
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068561858766:subnet/subnet-0406fdcc928b65cf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-0406fdcc928b65cf4",
            "map_public_ip_on_launch": false,
            "owner_id": "068561858766",
            "tags": {
              "Name": "golden-ami-factory-private"
            },
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068561858766:subnet/subnet-0f5c6570db0619749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-0f5c6570db0619749",
            "map_public_ip_on_launch": false,
            "owner_id": "068561858766",
            "tags": {
              "Name": "golden-ami-factory-public"
            },
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "golden-ami-factory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068561858766:vpc/vpc-0277ea723fb62ec51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042fda082d3a5ca3b",
            "default_route_table_id": "rtb-02461de633c1d1f69",
            "default_security_group_id": "sg-0636a2ae13f4e4b81",
            "dhcp_options_id": "dopt-03160f67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0277ea723fb62ec51",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02461de633c1d1f69",
            "owner_id": "068561858766",
            "tags": {
              "Name": "golden-ami-factory"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.16.0/21",
              "3.5.0.0/20"
            ],
            "id": "vpce-0196fe61f07d01336",
            "owner_id": "068561858766",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a3e8ef9b781022b9"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_security_group.this",
            "aws_subnet.private",
            "aws_vpc.golden-ami-factory"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0178b7b87986f4f0f-h6m5qnoa.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0178b7b87986f4f0f-h6m5qnoa-us-east-1d.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z057078025DA7P9R521GM"
              }
            ],
            "id": "vpce-0178b7b87986f4f0f",
            "network_interface_ids": [
              "eni-04d5f45b593c8745a"
            ],
            "owner_id": "068561858766",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048b1b91939bd380e"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0406fdcc928b65cf4"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_security_group.this",
            "aws_subnet.private",
            "aws_vpc.golden-ami-factory"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-03a6de7e391dde02f-3ty1kvfk.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03a6de7e391dde02f-3ty1kvfk-us-east-1d.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z057108620H8XQSM28WF1"
              }
            ],
            "id": "vpce-03a6de7e391dde02f",
            "network_interface_ids": [
              "eni-0793c47cf428a5f1d"
            ],
            "owner_id": "068561858766",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048b1b91939bd380e"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0406fdcc928b65cf4"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_security_group.this",
            "aws_subnet.private",
            "aws_vpc.golden-ami-factory"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0b6e9ab2952d2c3e7-2hyd0iqb.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b6e9ab2952d2c3e7-2hyd0iqb-us-east-1d.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05707831OR6WAP86ET0T"
              }
            ],
            "id": "vpce-0b6e9ab2952d2c3e7",
            "network_interface_ids": [
              "eni-02070097690915bd5"
            ],
            "owner_id": "068561858766",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048b1b91939bd380e"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0406fdcc928b65cf4"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0277ea723fb62ec51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_security_group.this",
            "aws_subnet.private",
            "aws_vpc.golden-ami-factory"
          ]
        }
      ]
    }
  ]
}